# rust-crud-axum-sqlx

./: .env  Cargo.toml  README.md
script/: delete_script.txt  post_script.txt  update_script.txt
sql/: rust_crud_axum_sqlx.sql
src/: main.rs
