[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
axum = "0.6.19"
tower = "0.4.13"
tower-http = {version = "0.4.1", features = ["full"] }
dotenv = "0.15.0"
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
serde = "1.0.177"
serde_json = "1.0.104"
chrono = { version = "0.4.24", features = ["serde"] }
